fix scrollbar cross browser

--- a/styles/Swap.module.scss
+++ b/styles/Swap.module.scss
@@ -1559,11 +1559,13 @@ $toogle-init: 100%;
     &::-webkit-scrollbar-button:single-button:vertical:decrement {
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23828282' viewBox='0 0 512 512' style='shape-rendering:geometricPrecision;text-rendering:geometricPrecision;image-rendering:optimizeQuality;fill-rule:evenodd;clip-rule:evenodd'%3E%3Cpath style='opacity:1' d='M511.5 365.5v9c-2.205 10.046-8.205 16.879-18 20.5-158.667.667-317.333.667-476 0-9.795-3.621-15.795-10.454-18-20.5v-9a74.513 74.513 0 0 1 5.5-10L239.5 121c10.651-7.275 21.317-7.275 32 0L506 355.5a74.483 74.483 0 0 1 5.5 10z'/%3E%3C/svg%3E");
         background-repeat: no-repeat;
+        background-position: center center;
     }
     /* Down */
     &::-webkit-scrollbar-button:single-button:vertical:increment {
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23828282' viewBox='0 0 512 512' style='shape-rendering:geometricPrecision;text-rendering:geometricPrecision;image-rendering:optimizeQuality;fill-rule:evenodd;clip-rule:evenodd'%3E%3Cpath style='opacity:1' d='M511.5 135.5v9c-1.34 3.817-3.174 7.483-5.5 11L271.5 390c-10.683 7.275-21.349 7.275-32 0L5 155.5c-2.326-3.517-4.16-7.183-5.5-11v-9c2.643-9.481 8.643-15.981 18-19.5 158.667-.667 317.333-.667 476 0 9.357 3.519 15.357 10.019 18 19.5z'/%3E%3C/svg%3E");
         background-repeat: no-repeat;
+        background-position: center center;
     }
 
     &.margined {
